Add validation & pagination

--- a/public/css/modals/forgot-password-modal.css
+++ b/public/css/modals/forgot-password-modal.css
@@ -5,12 +5,25 @@
   top: 163px;
   right: 85px;
   width: 350px;
-  height: 250px;
+  height: auto;
   background-color: rgb(243, 243, 243);
   border-radius: 30px;
   padding: 0 20px;
   padding-top: 20px;
   z-index: 100;
+  padding-bottom: 20px;
+}
+
+.modal-bg .forgot-modal .input-error-message {
+  box-sizing: border-box;
+  margin-top: 10px;
+  font-size: 15px;
+  color: rgb(120, 120, 138);
+  font-weight: 500;
+  letter-spacing: 1px;
+  margin-bottom: 5px;
+  padding-left: 10px;
+  border-left: 2px solid rgb(147, 80, 76);
 }
 
 .modal-bg .forgot-modal .forgot-text h3 {
