--- a/views/order-step1.hbs
+++ b/views/order-step1.hbs
@@ -9,43 +9,43 @@
         <div class="delivery-info-list">
           <div class="input-field">
             <p class="p-input">Имя</p>
-            <input name="name" id="name" type="text" value="{{user.name}}" required>
+            <input class="required-input" name="name" id="name" type="text" value="{{user.name}}" required>
           </div>
           <div class="input-field">
             <p class="p-input">Фамилия</p>
-            <input name="surname" id="surname" type="text" value="{{user.surname}}" required>
+            <input class="required-input" name="surname" id="surname" type="text" value="{{user.surname}}" required>
           </div>
           <div class="input-field">
             <p class="p-input">Отчество</p>
-            <input name="patronymic" id="patronymic" type="text" value="{{user.patronymic}}" required>
+            <input class="required-input" name="patronymic" id="patronymic" type="text" value="{{user.patronymic}}" required>
           </div>
           <div class="input-field">
             <p class="p-input">Телефон</p>
-            <input name="phone" id="phone" type="number" value="{{user.phone}}" required>
+            <input class="required-input" name="phone" id="phone" type="number" value="{{user.phone}}" required>
           </div>
           <div class="input-field">
             <p class="p-input">Эл. Почта</p>
-            <input name="email" id="email" type="text" value="{{user.email}}" required>
+            <input class="required-input" name="email" id="email" type="text" value="{{user.email}}" required>
           </div>
           <div class="input-field">
             <p class="p-input">Страна</p>
-            <input name="country" id="country" type="text" value="{{user.country}}" required>
+            <input class="required-input" name="country" id="country" type="text" value="{{user.country}}" required>
           </div>
           <div class="input-field">
             <p class="p-input">Город</p>
-            <input name="town" id="town" type="text" value="{{user.town}}" required>
+            <input class="required-input" name="town" id="town" type="text" value="{{user.town}}" required>
           </div>
           <div class="input-field">
             <p class="p-input">Край/Область/Регион</p>
-            <input name="region" id="region" type="text" value="{{user.region}}" required>
+            <input class="required-input" name="region" id="region" type="text" value="{{user.region}}" required>
           </div>
           <div class="input-field">
             <p class="p-input">Улица, Дом, Квартира</p>
-            <input name="address" id="address" type="text" value="{{user.address}}" required>
+            <input class="required-input" name="address" id="address" type="text" value="{{user.address}}" required>
           </div>
           <div class="input-field">
             <p class="p-input">Почтовый индекс</p>
-            <input name="zipcode" id="zipcode" type="number" value="{{user.zipcode}}" required>
+            <input class="required-input" name="zipcode" id="zipcode" type="number" value="{{user.zipcode}}" required>
           </div>
           <div class="continue-section">
             <input type="hidden" id="csrf" name="_csrf" value="{{csrf}}">
