--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,12 +1,12 @@
 <div class="nav">
   <div class="navbar">
     <ul class="menu-list">
-      <li><a href="/categories/weapons">Оружие</a></li>
-      <li><a href="/categories/hats">Головные уборы</a></li>
-      <li><a href="/categories/outerwear">Верхняя одежда</a></li>
-      <li><a href="/categories/gloves">Перчатки</a></li>
-      <li><a href="/categories/pants">Брюки</a></li>
-      <li><a href="/categories/accessories">Аксессуары</a></li>
+      <li><a href="/categories/weapons?page=1&limit=6">Оружие</a></li>
+      <li><a href="/categories/hats?page=1&limit=6">Головные уборы</a></li>
+      <li><a href="/categories/outerwear?page=1&limit=6">Верхняя одежда</a></li>
+      <li><a href="/categories/gloves?page=1&limit=6">Перчатки</a></li>
+      <li><a href="/categories/pants?page=1&limit=6">Брюки</a></li>
+      <li><a href="/categories/accessories?page=1&limit=6">Аксессуары</a></li>
 
       {{#if isFAQ}}
       <li class="active"><a href="/faq">FAQ</a></li>
