--- a/public/css/modals/login-modal.css
+++ b/public/css/modals/login-modal.css
@@ -13,6 +13,18 @@
   z-index: 100;
 }
 
+.modal-bg .login-modal .input-error-message {
+  box-sizing: border-box;
+  margin-top: 10px;
+  font-size: 15px;
+  color: rgb(120, 120, 138);
+  font-weight: 500;
+  letter-spacing: 1px;
+  margin-bottom: 5px;
+  padding-left: 10px;
+  border-left: 2px solid rgb(147, 80, 76);
+}
+
 .login-modal .login-info .p-input {
   text-align: left;
   font-weight: 500;
