--- a/public/css/modals/registration-modal.css
+++ b/public/css/modals/registration-modal.css
@@ -15,6 +15,18 @@
   z-index: 100;
 }
 
+.modal-bg .registration-modal .input-error-message {
+  box-sizing: border-box;
+  margin-top: 10px;
+  font-size: 15px;
+  color: rgb(120, 120, 138);
+  font-weight: 500;
+  letter-spacing: 1px;
+  margin-bottom: 5px;
+  padding-left: 10px;
+  border-left: 2px solid rgb(147, 80, 76);
+}
+
 .modal-bg .registration-modal .heading {
   position: relative;
   margin-top: 20px;
