--- a/public/css/pages/order-details.css
+++ b/public/css/pages/order-details.css
@@ -56,6 +56,18 @@
   width: 100%;
 }
 
+.order-details .order-section .delivery-info .delivery-info-list .input-field .input-error-message {
+  box-sizing: border-box;
+  margin-top: 10px;
+  font-size: 15px;
+  color: rgb(120, 120, 138);
+  font-weight: 500;
+  letter-spacing: 1px;
+  margin-bottom: 5px;
+  padding-left: 10px;
+  border-left: 2px solid rgb(147, 80, 76);
+}
+
 .order-details .order-section .delivery-info .delivery-info-list .input-field .p-input {
   text-align: left;
   font-weight: 500;
