--- a/public/css/style.css
+++ b/public/css/style.css
@@ -485,6 +485,49 @@ body {
   transition: 0.5s;
 }
 
+.category .pagination-section {
+  display: flex;
+  justify-content: center;
+}
+
+
+.category .pagination-section ul.pagination {
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+}
+
+.category .pagination-section ul.pagination li {display: inline;}
+
+.category .pagination-section ul.pagination li a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+  border: 1px solid #ddd;
+}
+
+.category .pagination-section .pagination li:first-child a {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.category .pagination-section .pagination li:last-child a {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.category .pagination-section ul.pagination li a.active {
+  background-color: rgb(150, 150, 150);
+  color: white;
+  border: 1px solid rgb(150, 150, 150);
+}
+
+.category .pagination-section ul.pagination li a:hover:not(.active) {
+  background-color: #ddd;
+}
+
 
 /* product page */
 
