--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -84,12 +84,12 @@
   <div class="nav">
     <div class="navbar">
       <ul class="menu-list">
-        <a href="/categories/weapons"><li>Оружие</li></a>
-        <a href="/categories/hats"><li>Головные уборы</li></a>
-        <a href="/categories/outerwear"><li>Верхняя одежда</li></a>
-        <a href="/categories/gloves"><li>Перчатки</li></a>
-        <a href="/categories/pants"><li>Брюки</li></a>
-        <a href="/categories/accessories"><li>Аксессуары</li></a>
+        <a href="/categories/weapons?page=1&limit=6"><li>Оружие</li></a>
+        <a href="/categories/hats?page=1&limit=6"><li>Головные уборы</li></a>
+        <a href="/categories/outerwear?page=1&limit=6"><li>Верхняя одежда</li></a>
+        <a href="/categories/gloves?page=1&limit=6"><li>Перчатки</li></a>
+        <a href="/categories/pants?page=1&limit=6"><li>Брюки</li></a>
+        <a href="/categories/accessories?page=1&limit=6"><li>Аксессуары</li></a>
         <a href="/faq"><li>FAQ</li></a>
         <li class="check-status-btn">Статус заказа</li>
       </ul>
@@ -102,10 +102,14 @@
   <div class="login-modal">
     <form class="login-form" action="/auth/login" method="POST">
       <div class="login-info">
-        <p class="p-input">Эл. почта</p>
-        <input type="text" name="email" required>
-        <p class="p-input">Пароль</p>
-        <input type="password" name="password" required>
+        <div class="input-field">
+          <p class="p-input">Эл. почта</p>
+          <input class="required-login-input" id="login-email" type="text" name="email" required>
+        </div>
+        <div class="input-field">
+          <p class="p-input">Пароль</p>
+          <input class="required-login-input" id="login-password" type="password" name="password" required>
+        </div>
       </div>
       <div class="remember-forgot">
         <label class="remember">Запомнить
@@ -147,7 +151,7 @@
     <form action="/auth/reset" method="post">
       <div class="forgot-info">
         <p class="p-input">Эл. почта</p>
-        <input type="text" name="email">
+        <input class="required-fog-input" id="fog-email" type="text" name="email">
       </div>
       <div class="forgot-buttons">
         <input type="hidden" name="_csrf" value="{{csrf}}">
@@ -166,12 +170,18 @@
         <h3>Регистрация</h3>
       </div>
       <div class="registration-info">
-        <p class="p-input">Эл. почта</p>
-        <input type="text" name="email">
-        <p class="p-input">Пароль</p>
-        <input type="password" name="password">
-        <p class="p-input">Подтвердите пароль</p>
-        <input type="password" name="confirm">
+        <div class="input-field">
+          <p class="p-input">Эл. почта</p>
+          <input class="required-reg-input" id="reg-email" type="text" name="email">
+        </div>
+        <div class="input-field">
+          <p class="p-input">Пароль</p>
+          <input class="required-reg-input" id="reg-password" type="password" name="password">
+        </div>
+        <div class="input-field">
+          <p class="p-input">Подтвердите пароль</p>
+          <input class="required-reg-input" id="reg-confirm-password" type="password" name="confirm">
+        </div>
       </div>
       <div class="registration-btn">
         <input type="hidden" name="_csrf" value="{{csrf}}">
